@@ -1,3 +1,11 @@
+2005-09-20  Richard Henderson  <rth@redhat.com>
+
+	* critical.c (GOMP_critical_name_start, GOMP_critical_name_end): New.
+	(create_lock_lock): New.
+	(initialize_critical): Initialize it.
+	* libgomp.map (GOMP_critical_name_start, GOMP_critical_name_end): New.
+	* libgomp_g.h (GOMP_ordered_start, GOMP_ordered_end): Declare.
+
 2005-09-20  Diego Novillo  <dnovillo@redhat.com>
 
 	* testsuite/libgom.dg/omp-loop01.c: Include stdio.h.
